@@ -1,4 +1,0 @@
-library(testthat)
-library(eeptools)
-
-test_package("eeptools")
